--- a/200.1. Measure and Troubleshoot Resource Usage.md
+++ b/200.1. Measure and Troubleshoot Resource Usage.md
@@ -291,7 +291,7 @@ Like top, you can use  &lt; &gt; keys to sort based on different columns, and yo
 
 #### nload
 
-Networl Load nload is another Handy tool, this time for monitoring current bandwidth.
+Network Load nload is another Handy tool, this time for monitoring current bandwidth.
 
 ```
 Device ens33 [192.168.10.131] (1/2):
